<resources>
    <string name="app_name">Skor Defteri</string>
    <string name="newGame_button">Yeni Oyun</string>
    <string name="pastGames_button">Kaydedilen Oyunlar</string>
    <string name="newGame_text">Yeni Oyun</string>
    <string name="gameName_text">Oyun İsmi</string>
    <string name="gameName_text2">Oyun İsmi (İsteğe Bağlı)</string>
    <string name="player1_name">Oyuncu-1 Adı</string>
    <string name="player2_name">Oyuncu-2 Adı</string>
    <string name="player3_name">Oyuncu-3 Adı</string>
    <string name="player4_name">Oyuncu-4 Adı</string>
    <string name="playerNumber_text">Oyuncu Sayısı</string>
    <string name="twoPlayer_text">2</string>
    <string name="threePlayer_text">3</string>
    <string name="fourPlayer_text">4</string>
    <string name="gameType_text">Oyun Türü</string>
    <string name="single_text">Tekli</string>
    <string name="multiple_text">Eşli</string>
    <string name="scoreboard_text">Puan Tablosu</string>
    <string name="player1_text">Oyuncu 1</string>
    <string name="player2_text">Oyuncu 2</string>
    <string name="player3_text">Oyuncu 3</string>
    <string name="player4_text">Oyuncu 4</string>
    <string name="scoreboard_text2">Puan \nTablosu</string>
    <string name="add_score_text2">Skor \nEkle</string>
    <string name="finish_game_text2">Oyunu \nBitir</string>
    <string name="zero_score_text">0</string>
    <string name="score_editText">Skor</string>
    <string name="scoreboard_bottom_menu">Skor Tablosu</string>
    <string name="add_score_bottom_menu">Puan Ekle</string>
    <string name="delete_bottom_menu">Sil</string>
    <string name="add_button">Ekle</string>
    <string name="winner_player_text">Oyuncu Kazandı</string>
    <string name="line_text">___</string>
    <string name="add_score_title">Skor Ekle</string>
    <string name="scoreboard_title">Puan Tablosu</string>
    <string name="roll_dice_again_text">Yeniden At</string>
    <string name="again_text">Yeniden At</string>
    <string name="text">/</string>
    <string name="gameNumber_text">1. El</string>
    <string name="number_text">1</string>
    <string name="calculator_text">Hesap Makinesi</string>
    <string name="noColor_text">Renk Yok</string>
    <string name="red_text">Kırmızı</string>
    <string name="blue_text">Mavi</string>
    <string name="yellow_text">Sarı</string>
    <string name="black_text">Siyah</string>
    <string name="colorsValue_title">Renk Değerleri</string>
    <string name="value_editText">Değer</string>
    <string name="player_type_text">Oyuncu Şekli</string>
    <string name="deduct_from_number_text">Sayıdan Düş</string>
    <string name="add_score_team_operations_text">Sayı Ekle</string>
    <string name="add_score_text">Sayı Ekle</string>
    <string name="number_of_starts_text">Başlangıç Sayısı</string>
    <string name="score_detail_title">Skor Detay</string>
    <string name="cross_text">X</string>
    <string name="equal_text">=</string>
    <string name="delete_text">Sil</string>
    <string name="edit_text">Düzenle</string>
    <string name="info_text">Bilgilendirme</string>
    <string name="info_description_text">Bu uygulama ile herhangi bir okey oyunundaki puan tablonuzu tutabilirsiniz ve daha sonra bakmak veya devam etmek için kaydedebilirsiniz.</string>
    <string name="rate_text">Derecelendir</string>
    <string name="developer_text">Geliştirici</string>
    <string name="cancel_text">İptal</string>
    <string name="app_theme_text">Uygulama Teması</string>
    <string name="current_theme_text">Mevcut tema:</string>
    <string name="app_theme_description_text">Uygulama temasını seçiniz.</string>
    <string name="light_text">Açık</string>
    <string name="dark_text">Koyu</string>
    <string name="system_theme_text">Sistem Teması</string>
    <string name="rate_completed_text">Değerlendirme Tamamlandı!</string>
    <string name="restart_text">Yeniden Başlat</string>
    <string name="update_downloaded_text">An update has just been downloaded.</string>
    <string name="cancel_update_text">Güncelleme İptal Edildi!</string>
    <string name="error_text">Hata!</string>
    <string name="compulsory_text">Zorunlu!</string>
    <string name="enter_player_name_text">Lütfen oyuncu adlarını girin!</string>
    <string name="start_text">Başla</string>
    <string name="skip_text">Atla</string>
    <string name="enter_color_values">Lütfen Renk Değerlerini Girin veya Atla Seçin!</string>
    <string name="team1_text">Takım 1</string>
    <string name="team2_text">Takım 2</string>
    <string name="new_game_text">Yeni Oyun</string>
    <string name="add_text">Ekle</string>
    <string name="enter_all_scores_text">Lütfen tüm oyuncuların skorlarını girin!</string>
    <string name="round_text">El</string>
    <string name="ahead_text">Önde</string>
    <string name="tie_text">Beraberlik.</string>
    <string name="ok_text">Tamam</string>
    <string name="won_text">Kazandı</string>
    <string name="new_game_start_text">Yeni Oyun Başlat</string>
    <string name="main_menu_text">Ana Menu</string>
    <string name="no_round_to_delete_text">Silinecek herhangi bir el yok!</string>
    <string name="delete_round_text">Seçili Eli Sil</string>
    <string name="delete_round_description_text">Seçili eli silmek istediğinizden emin misiniz?</string>
    <string name="exit_text">Çıkış</string>
    <string name="exit_description_text">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="exit_without_save_text">Kaydetmeden Çık</string>
    <string name="finish_game_text">Oyunu Bitir</string>
    <string name="finish_game_description_text">Oyunu bitirmek istediğinize emin misiniz?</string>
    <string name="back_text">Geri Dön</string>
    <string name="playerNumber_text2">Oyuncu \nSayısı</string>
    <string name="player_type_text2">Oyuncu \nŞekli</string>
    <string name="gameType_text2">Oyun \nTürü</string>
    <string name="deduct_from_number_text2">Sayıdan \nDüş</string>
    <string name="add_score_team_operations_text2">Sayı \nEkle</string>
    <string name="highest_score_text">Yüksek \nPuan</string>
    <string name="lowest_score_text">Düşük \nPuan</string>
    <string name="winType_text">Kazanma \nŞekli</string>
    <string name="info_number_of_player_text">1\'den 4\'e kadar oyuncu seçenekleri.</string>
    <string name="info_player_type_text">Tekli veya eşli oynama seçenekleri.</string>
    <string name="info_game_type_text">0\'dan başlayarak oynama veya belirli bir sayı belirleyerek o sayıdan düşme şeklinde oynama seçenekleri.</string>
    <string name="info_win_type_text">Oyun sonunda en yüksek veya en düşük skora sahip oyuncunun kazanma seçenekleri.</string>
    <string name="winType_text2">Kazanma Şekli</string>
    <string name="app_language_text">Uygulama Dili</string>
    <string name="app_language_description_text">Uygulama dilini seçiniz.</string>
    <string name="tr_text">Türkçe</string>
    <string name="eng_text">İngilizce</string>
    <string name="finishGame_text">Oyunu \nBitirince</string>
    <string name="reachScore_text">Skor</string>
    <string name="finishType_text">Bitirme \nŞekli</string>
    <string name="target_score_text">Hedef Skor</string>
    <string name="finishType_text2">Bitirme Şekli</string>
    <string name="info_finish_type_text">Oyunu elle manuel olarak bitirme, belirlenen hedef skora ulaşınca otomatik olarak bitirme veya belirlenen el sayısına ulaşınca otomatik olarak bitirme seçenekleri.</string>
    <string name="enter_first_number_text">Lütfen Başlangıç Skoru Girin!</string>
    <string name="enter_target_score_text">Lütfen Hedef Skor Girin!</string>
    <string name="target_and_first_number_error_description_text">Hedef skoru başlangıç sayısından daha fazla veya başlangıç sayısına eşit olamaz!</string>
    <string name="update_text">Güncelle</string>
    <string name="update_available_text">Güncelleme Mecvut</string>
    <string name="update_available_description_text">Uygulamanın en son sürümündeki yenilikleri kullanabilmek için lütfen uygulamayı güncelleyin.</string>
    <string name="fake_text">Sahte</string>
    <string name="select_color_text">Lütfen Renk Seçiniz!</string>
    <string name="zero_color_value_error_text">Renk Değeri 0 Olamaz!</string>
    <string name="target_round_text">Hedef El Sayısı</string>
    <string name="manual_text">Manuel</string>
    <string name="reachRound_text">El</string>
    <string name="game_is_finished_text">Oyun Tamamlandı!</string>
    <string name="game_almost_over_description_text">Oyunun bitmesine kalan el sayısı</string>
    <string name="game_almost_over_text">Son</string>
</resources>