<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/scoreboard_text"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/scoreboard2Player_player1_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreboard2Player_player1Name_textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/player1_text"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:text="@string/line_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/scoreboard2Player_player1Score_textView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/zero_score_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreboard2Player_player2_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreboard2Player_player2Name_textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/player2_text"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:text="@string/line_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/scoreboard2Player_player2Score_textView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/zero_score_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cup"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/scoreboard2Player_winnerPlayer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/winner_player_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>