<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".activity.scoreboard.Scoreboard2Player">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/scoreBoard2Player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/scoreBoard2Player_back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/scoreBoard2Player_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/scoreboard_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

        <TextView
            android:id="@+id/scoreBoard2Player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

        <TextView
            android:id="@+id/scoreBoard2Player_roundNumber_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/gameNumber_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

        <ImageView
            android:id="@+id/scoreBoard2Player_dice_icon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/dice"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <ImageView
            android:id="@+id/scoreBoard2Player_calculator_icon"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/calculator"
            tools:ignore="ContentDescription,RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/scoreBoard2Player_playerNames_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreBoard2Player_toolbar">

        <TextView
            android:id="@+id/scoreBoard2Player_player1Name_text"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa"
            android:text="@string/player1_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/scoreBoard2Player_player2Name_text"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/player2_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreBoard2Player_instantScores_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreBoard2Player_playerNames_linearLayout">

        <TextView
            android:id="@+id/scoreBoard2Player_player1InstantScore_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/comfortaa"
            android:text="@string/zero_score_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/scoreBoard2Player_player2InstantScore_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="110dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/zero_score_text"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scoreBoard2Player_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreBoard2Player_instantScores_linearLayout"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scoreBoard2Player_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoard2Player_scoreboard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/scoreBoard2Player_view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scoreBoard2Player_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />

    </androidx.core.widget.NestedScrollView>

    <HorizontalScrollView
        android:id="@+id/scoreBoard2Player_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreBoard2Player_nestedScrollView"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scoreBoard2Player_scoreboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/scoreboard_text2"
        android:textColor="@color/text_color"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/scoreBoard2Player_addScore_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreBoard2Player_nestedScrollView"
        app:strokeColor="@color/text_color"
        app:strokeWidth="2dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scoreBoard2Player_addScore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/add_score_text2"
        android:textColor="@color/text_color"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/scoreBoard2Player_finishGame_button"
        app:layout_constraintStart_toEndOf="@+id/scoreBoard2Player_scoreboard_button"
        app:layout_constraintTop_toTopOf="@+id/scoreBoard2Player_scoreboard_button"
        app:strokeColor="@color/text_color"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scoreBoard2Player_finishGame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/finish_game_text2"
        android:textColor="@color/text_color"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreBoard2Player_addScore_button"
        app:layout_constraintTop_toTopOf="@+id/scoreBoard2Player_addScore_button"
        app:strokeColor="@color/text_color"
        app:strokeWidth="2dp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scoreBoard2Player_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5963947262278027/1072179297"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>